fix: rename package to match manifest id (fixes config mismatch warning)

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "openclaw-plugin-continuity",
+  "name": "continuity",
   "version": "0.1.0",
-  "description": "Infinite Thread — persistent, intelligent memory for OpenClaw agents. Context budgeting, continuity anchors, topic tracking, conversation archiving, and cross-session semantic search via SQLite-vec.",
+  "description": "Infinite Thread \u2014 persistent, intelligent memory for OpenClaw agents. Context budgeting, continuity anchors, topic tracking, conversation archiving, and cross-session semantic search via SQLite-vec.",
   "main": "index.js",
   "dependencies": {
-    "better-sqlite3": "^11.0.0",
-    "sqlite-vec": "^0.1.7-alpha.2",
-    "@chroma-core/default-embed": "^0.1.0"
+    "@chroma-core/default-embed": "^0.1.0",
+    "better-sqlite3": "^11.10.0",
+    "sqlite-vec": "^0.1.7-alpha.2"
   },
   "keywords": [
     "openclaw",
@@ -23,7 +23,9 @@
     "node": ">=18.0.0"
   },
   "openclaw": {
-    "extensions": ["./index.js"]
+    "extensions": [
+      "./index.js"
+    ]
   },
   "files": [
     "index.js",
